apps/jay-ssp-1/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jay-ssp-1
  namespace: dev
  labels:
    app: jay-ssp-1
    backstage.io/kubernetes-id: jay-ssp-1
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jay-ssp-1
  template:
    metadata:
      labels:
        app: jay-ssp-1
        backstage.io/kubernetes-id: jay-ssp-1
        environment: dev
    spec:
      containers:
        - name: jay-ssp-1
          image: chaitanyapandeygspann/jay-ssp-1:1.0.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
