apps/jay-ssp-1/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jay-ssp-1
  namespace: dev
  labels:
    backstage.io/kubernetes-id: jay-ssp-1
spec:
  selector:
    app: jay-ssp-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
