apps/jay-ssp-1/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jay-ssp-1
  namespace: dev
  labels:
    backstage.io/kubernetes-id: jay-ssp-1
    environment: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /jay-ssp-1-dev(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: jay-ssp-1
                port:
                  number: 80
